--- a/clientside/package.json
+++ b/clientside/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.2.3",
+    "ng-bootstrap": "^1.6.3",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.7.3",
     "tslib": "^2.3.0",
